--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     background-color: white;
 }
 
+
 .top-section {
     display: flex;
     /* flex-wrap: wrap; */
@@ -115,4 +116,16 @@ hr {
 #currentDayData {
     color: rgb(136, 46, 232);
     padding-right: 20px;
+}
+
+/* validation */
+
+.form {
+    display: flex;
+    gap: 30px;
+}
+
+.error {
+    color: red;
+    text-align: center;
 }
