--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 .container {
-    height: 60vh;
-    width: 55vw;
+    height: 65vh;
+    width: 700px;
     border-radius: 1.5em;
     border-bottom-right-radius: 200px;
     background-color: white;
@@ -125,6 +125,5 @@ hr {
     gap: 30px;
 }
 
-/* input:required {
-    border: 1px solid red;
-} */
+
+
